slides for day 2 of KAUST AI Conf 2021

--- a/i_papers.html
+++ b/i_papers.html
@@ -483,6 +483,7 @@
 
           [97] Nicolas Loizou and Peter Richtárik<br>
           <b>Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</b><br>
+          To appear in: IEEE Transactions on Information Theory<br>
           [<a href="https://arxiv.org/abs/1905.08645">arXiv</a>]<br>
           <br>
 
@@ -926,8 +927,7 @@ src="imgs/youtube.png" width="17" height="15" border="0"></a>]
 Smith, Michael I Jordan, P. Richtárik and Martin Takáč <b>Distributed optimization with arbitrary local solvers</b><br>
 <a
 href="http://www.tandfonline.com/doi/full/10.1080/10556788.2016.1278445">Optimization Methods and Software 32(4):813-848, 2017</a><br>
-<span class="important">Most-Read Paper, Optimization
-Methods and Software, 2017</span><br>
+<span class="important">Most-Read Paper, Optimization Methods and Software, 2017</span><br>
 [<a href="http://arxiv.org/abs/1512.04039">arXiv</a>] [code:
 <a href="https://github.com/gingsmith/cocoa">CoCoA+</a>]<a
 href="http://arxiv.org/abs/1507.08322"><br>
@@ -935,8 +935,7 @@ href="http://arxiv.org/abs/1507.08322"><br>
 
 <p>[40] Martin Takáč, Peter Richtárik and Nathan Srebro <br>
 <b>Distributed mini-batch SDCA</b><br>
-to appear in: <i>Journal of Machine Learning Research</i>,
-2018<br>
+To appear in: Journal of Machine Learning Research<br>
 [<a href="http://arxiv.org/abs/1507.08322">arXiv</a>] <br>
 </p>
 
