--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
         <div id="content">
 
 
+          <h3>April 29, 2021</h3>
+          <h1>Paper Accepted to IEEE Transactions on Information Theory</h1>
+            <br>
+        Our paper <a href="https://arxiv.org/abs/1905.08645">Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</a>, joint work with
+<a href="https://nicolasloizou.github.io">Nicolas Loizou</a>, was accepted to IEEE Transactions on Information Theory.<br>
+
 
 
 
@@ -57,7 +63,7 @@ Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii
   <br>
 
   <br>
-  <a href="slides/Talk-1-KAUST-AI-Conference-2021.pdf"><img alt="" src="imgs/KAUST-AI-Conference-2021-Talk-Richtarik.png" width="350"></a>
+  <a href="slides/Talk-1-KAUST-AI-Conference-2021.pdf"><img alt="" src="imgs/KAUST-AI-Conference-2021-Talk-1-Richtarik.png" width="700"></a>
   <br>
 
 
@@ -65,7 +71,19 @@ Today and tomorrow I am attending the <a href="https://cemse.kaust.edu.sa/ai/aii
 
 
    I will deliver another 20 min talk tomorrow, entitled "On Solving a Key Challenge in Federated Learning: Local Steps, Compression
-  and Personalization".
+  and Personalization". Here are the slides:
+
+
+    <br>
+
+    <br>
+    <a href="slides/Talk-2-KAUST-AI-Conference-2021.pdf"><img alt="" src="imgs/KAUST-AI-Conference-2021-Talk-2-Richtarik.png" width="700"></a>
+    <br>
+
+
+  <br>
+
+
 <br>
 <br>
 
