--- a/i_team.html
+++ b/i_team.html
@@ -73,7 +73,7 @@
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (1/2021-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/news/meet-kaust-student-konstantin-burlachenko?fbclid=IwAR2KCPy-X1C4Ls8u9rhlkNwqdRqONaKPqHdXzmBq_lSNDpOjGxVBM-o0DZE">Konstantin Burlachenko</a> (08/2020-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
-            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (1/2020-present)</li>
+            <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (1/2020-present)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a>  (1/2019-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a>  (1/2019-present)</li>
             <li><a href="https://konstmish.github.io/">Konstantin Mishchenko</a> (9/2017-present)</li>
@@ -91,7 +91,7 @@
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (1/2020-present)</li>
             <li><a href="https://alyazeedbasyoni.wixsite.com/blog">Alyazeed Basyoni</a> (8/2019-12/2020)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (8/2019-12/2020)</li>
-            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (9/2018-12/2019)</li>
+            <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (9/2018-12/2019)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (9/2018-12/2019)</li>
             <li><a href="https://samuelhorvath.github.io">Samuel Horváth</a> (8/2017-12/2018)</li>
             <li><a href="https://cemse.kaust.edu.sa/people/person/alibek-sailanbayev">Alibek Sailanbayev</a> (8/2017-12/2018)</li>
@@ -123,7 +123,7 @@
             <li><a href="https://shulgin-egor.github.io">Egor Shulgin</a> (Moscow Institute of Physics and Technology), 1/2019-2/2019</li>
             <li> Sarah Sachs (Technical University Munich), 3/2018-8/2018</li>
             <li><a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
-            <li><a href="http://elnurgasanov.me">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
+            <li><a href="http://elnurgasanov.com">Elnur Gasanov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
             <li><a href="https://eduardgorbunov.github.io/index.html#header3-a">Eduard Gorbunov</a> (Moscow Institute of Physics and Technology), 1/2018-2/2018</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (Comenius University), 1/2018-2/2018</li>
             <li> Aashutosh Tiwari (IIT Kanpur), 5/2017-7/2017</li>
