--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
 <a href="https://nicolasloizou.github.io">Nicolas Loizou</a>, was accepted to IEEE Transactions on Information Theory.<br>
 
 
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
 
 
 <h3>April 28, 2021</h3>
