--- a/i_papers.html
+++ b/i_papers.html
@@ -68,6 +68,7 @@
 
           [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin and Alexander Gasnikov<br>
           <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
+          ICML 2021 <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] <br>
           <br>
@@ -80,6 +81,7 @@
 
           [155] Eduard Gorbunov, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>MARINA: faster non-convex distributed learning with compression </b><br>
+          ICML 2021 <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [code: MARINA, VR-MARINA, PP-MARINA]  <br>
@@ -95,6 +97,7 @@
 
           [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
+          ICML 2021 <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="talks/TALK-2021-Newton-Learn.pdf">slides</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
@@ -199,8 +202,8 @@
 
           [138] Zhize Li, Hongyan Bao, Xiangliang Zhang and Peter Richtárik <br>
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
-          <a href="https://opt-ml.org/papers/2020/paper_76.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) </a> <br>
-          <span class="important">Spotlight Talk</span><br>
+          <a href="https://opt-ml.org/papers/2020/paper_76.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) <span class="important">(Spotlight Talk)</span></a> <br>
+          ICML 2021 <br>
           [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE]  <br>
           <br>
 
@@ -294,7 +297,7 @@
 
           [123] Mher Safaryan, Egor Shulgin and Peter Richtárik<br>
           <b>Uncertainty principle for communication compression in distributed and federated learning and the search for an optimal compressor</b><br>
-          To appear in: Information and Inference, A Journal of the IMA <br>
+          <a href="https://academic.oup.com/imaiai/advance-article/doi/10.1093/imaiai/iaab006/6220344">Information and Inference: A Journal of the IMA, 1--24, 2021</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2002.08958">arXiv</a>]<br>
           <br>
@@ -405,7 +408,8 @@
           <br>
 
           [107] Mher Safaryan and Peter Richtárik<br>
-          <b>On stochastic sign descent methods</b><br>
+          <b>Stochastic Sign Descent Methods: New Algorithms and Better Theory</b><br>
+          ICML 2021 <br>
           <a href="https://opt-ml.org/papers/2020/paper_14.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           [<a href="https://arxiv.org/abs/1905.12938">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_14.png">poster</a>] [code: signSGD, signSGDmaj]<br>
           <br>
