--- a/index.html
+++ b/index.html
@@ -43,10 +43,122 @@
         <div id="content">
 
 
-          <h3>April 29, 2021</h3>
-          <h1>Paper Accepted to IEEE Transactions on Information Theory</h1>
-            <br>
-        Our paper <a href="https://arxiv.org/abs/1905.08645">Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</a>, joint work with
+
+<h3>May 10, 2021</h3>
+<h1>Papers Accepted to ICML 2021</h1>
+<br>
+We've had several papers accepted to the <a href="https://icml.cc/Conferences/2021">International Conference on Machine Learning (ICML 2021)</a>, which will be run virtually during July 18-24, 2021.
+Here they are:<br><br>
+
+
+<b> 1) <a href="https://arxiv.org/abs/2102.07845">"MARINA: Faster Non-convex Distributed Learning with Compression"</a></b> - joint work with
+<a href="https://eduardgorbunov.github.io">Eduard Gorbunov</a>,
+<a href="https://burlachenkok.github.io/home">Konstantin Burlachenko</a> and <a href="https://zhizeli.github.io">Zhize Li</a>.<br>
+<br>
+
+Abstract: <i>We develop and analyze MARINA: a new communication efficient method for non-convex distributed learning over heterogeneous datasets. MARINA employs a novel communication compression strategy based on the compression of gradient differences which is reminiscent of but different from the strategy employed in the DIANA method of Mishchenko et al (2019). Unlike virtually all competing distributed first-order methods, including DIANA, ours is based on a carefully designed biased gradient estimator, which is the key to its superior theoretical and practical performance. To the best of our knowledge, the communication complexity bounds we prove for MARINA are strictly superior to those of all previous first order methods. Further, we develop and analyze two variants of MARINA: VR-MARINA and PP-MARINA. The first method is designed for the case when the local loss functions owned by clients are either of a finite sum or of an expectation form, and the second method allows for partial participation of clients -- a feature important in federated learning. All our methods are superior to previous state-of-the-art methods in terms of the oracle/communication complexity. Finally, we provide convergence analysis of all methods for problems satisfying the Polyak-Lojasiewicz condition.
+</i>
+<br>
+<br>
+
+More material:
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=o5MwC4DYbGE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=34">Short 5 min YouTube talk by Konstantin</a></li>
+  <li><a href="https://www.youtube.com/watch?v=bj0E94Siq74">Long 70 min YouTube talk by Eduard delivered at the FLOW seminar</a> </li>
+  <li><a href="">poster</a></li>
+</ul>
+<br>
+
+
+
+<b> 2) <a href="https://arxiv.org/abs/2008.10898">"PAGE: A Simple and Optimal Probabilistic Gradient Estimator for Nonconvex Optimization"</a> </b> - joint work with
+<a href="https://zhizeli.github.io">Zhize Li</a>, <a href="https://cemse.kaust.edu.sa/people/person/hongyan-bao">Hongyan Bao</a>, and <a href="https://cemse.kaust.edu.sa/people/person/xiangliang-zhang">Xiangliang Zhang</a>.
+<br>
+<br>
+
+Abstract: <i>In this paper, we propose a novel stochastic gradient estimator---ProbAbilistic Gradient Estimator (PAGE)---for nonconvex optimization. PAGE is easy to implement as it is designed via a small adjustment to vanilla SGD:
+  in each iteration, PAGE uses the vanilla minibatch SGD update with probability p or reuses the previous gradient with a small adjustment, at a much lower computational cost, with probability 1−p. We give a simple formula for the
+  optimal choice of p. We prove tight lower bounds for nonconvex problems, which are of independent interest. Moreover, we prove matching upper bounds both in the finite-sum and online regimes, which establish that PAGE is an optimal
+  method. Besides, we show that for nonconvex functions satisfying the Polyak-Łojasiewicz (PL) condition, PAGE can automatically switch to a faster linear convergence rate. Finally, we conduct several deep learning experiments (e.g.,
+  LeNet, VGG, ResNet) on real datasets in PyTorch, and the results demonstrate that PAGE not only converges much faster than SGD in training but also achieves the higher test accuracy, validating our theoretical results and confirming
+  the practical superiority of PAGE. </i>
+  <br>
+<br>
+
+More material:
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=_K3XPxN-vdk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=29">Short 5 min YouTube talk by Zhize</a></li>
+</ul>
+<br>
+
+
+<b> 3) <a href="https://arxiv.org/abs/2102.07158">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a> </b> - work of  <a
+href="https://rustem-islamov.github.io">Rustem Islamov</a> and <a href="https://qianxunk.github.io">Xun Qian</a>.<br>
+<br>
+
+Abstract: <i>
+We develop several new communication-efficient second-order methods for distributed optimization. Our first method, NEWTON-STAR, is a variant of Newton's method from which it inherits its fast local quadratic rate. However, unlike Newton's method, NEWTON-STAR enjoys the same per iteration communication cost as gradient descent. While this method is impractical as it relies on the use of certain unknown parameters characterizing the Hessian of the objective function at the optimum, it serves as the starting point which enables us design practical variants thereof with strong theoretical guarantees. In particular, we design a stochastic sparsification strategy for learning the unknown parameters in an iterative fashion in a communication efficient manner. Applying this strategy to NEWTON-STAR leads to our next method, NEWTON-LEARN, for which we prove local linear and superlinear rates independent of the condition number. When applicable, this method can have dramatically superior convergence behavior when compared to state-of-the-art methods. Finally, we develop a globalization strategy using cubic regularization which leads to our next method, CUBIC-NEWTON-LEARN, for which we prove global sublinear and linear convergence rates, and a fast superlinear rate. Our results are supported with experimental results on real datasets, and show several orders of magnitude improvement on baseline and state-of-the-art methods in terms of communication complexity.
+ </i> <br>
+<br>
+
+More material:
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=iSKBZXlaoWo&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=41">Short 5 min YouTube talk by Rustem</a></li>
+  <li><a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">Long 80 min YouTube talk by myself delivered at the FLOW seminar</a></li>
+  <li><a href="https://richtarik.org/talks/TALK-2021-Newton-Learn.pdf">my FLOW talk slides</a></li>
+  <li><a href="https://richtarik.org/posters/Poster-Newton-Learn.pdf">poster</a></li>
+</ul>
+<br>
+
+
+<b> 4) <a href="https://arxiv.org/abs/1905.12938">"Stochastic Sign Descent Methods: New Algorithms and Better Theory"</a> </b> - joint work with <a href="https://mher-safaryan.github.io">Mher Safaryan</a>. <br>
+<br>
+
+Abstract: <i>
+Various gradient compression schemes have been proposed to mitigate the communication cost in distributed training of large scale machine learning models. Sign-based methods, such as signSGD, have recently been gaining popularity because of their simple compression rule and connection to adaptive gradient methods, like ADAM. In this paper, we analyze sign-based methods for non-convex optimization in three key settings: (i) standard single node, (ii) parallel with shared data and (iii) distributed with partitioned data. For single machine case, we generalize the previous analysis of signSGD relying on intuitive bounds on success probabilities and allowing even biased estimators. Furthermore, we extend the analysis to parallel setting within a parameter server framework, where exponentially fast noise reduction is guaranteed with respect to number of nodes, maintaining 1-bit compression in both directions and using small mini-batch sizes. Next, we identify a fundamental issue with signSGD to converge in distributed environment. To resolve this issue, we propose a new sign-based method, Stochastic Sign Descent with Momentum (SSDM), which converges under standard bounded variance assumption with the optimal asymptotic rate. We validate several aspects of our theoretical findings with numerical experiments.
+</i> <br>
+<br>
+
+More material:
+<ul>
+  <li><a href="https://opt-ml.org/posters/2020/poster_14.png">poster</a></li>
+</ul>
+<br>
+
+
+<b> 5) <a href="https://arxiv.org/abs/2102.09234">"ADOM: Accelerated Decentralized Optimization Method for Time-Varying Networks"</a> </b>
+- joint work with
+<a href="https://www.dmitry-kovalev.com">Dmitry Kovalev</a>, <a href="https://shulgin-egor.github.io">Egor Shulgin</a>,
+ <a
+href="https://scholar.google.com/citations?hl=ru&user=sEjyzkgAAAAJ">Alexander Rogozin</a> and <a href="https://www.hse.ru/en/org/persons/49503846">Alexander Gasnikov</a>.
+<br>
+<br>
+
+Abstract: <i>We propose ADOM - an accelerated method for smooth and strongly convex decentralized optimization over time-varying networks. ADOM uses a dual oracle, i.e., we assume access to the gradient of the Fenchel conjugate of the individual loss functions. Up to a constant factor, which depends on the network structure only, its communication complexity is the same as that of accelerated Nesterov gradient method (Nesterov, 2003). To the best of our knowledge, only the algorithm of Rogozin et al. (2019) has a convergence rate with similar properties. However, their algorithm converges under the very restrictive assumption that the number of network changes can not be greater than a tiny percentage of the number of iterations. This assumption is hard to satisfy in practice, as the network topology changes usually can not be controlled. In contrast, ADOM merely requires the network to stay connected throughout time.
+</i><br>
+
+More material:
+<ul>
+  <li>  <a href="https://www.youtube.com/watch?v=jO3t4eZFdkc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=37">Short 5 min YouTube talk by Egor</a> </li>
+  <li>  <a href="posters/Poster-ADOM-ICML-2021.pdf">poster</a> </li>
+</ul>
+<br>
+
+
+<br>
+<br>
+<img alt="" src="imgs/fancy-line.png" width="196" height="36">
+<br>
+<br>
+
+
+
+
+<h3>April 29, 2021</h3>
+<h1>Paper Accepted to IEEE Transactions on Information Theory</h1>
+
+<br>
+Our paper <a href="https://arxiv.org/abs/1905.08645">Revisiting randomized gossip algorithms: general framework, convergence rates and novel block and accelerated protocols</a>, joint work with
 <a href="https://nicolasloizou.github.io">Nicolas Loizou</a>, was accepted to IEEE Transactions on Information Theory.<br>
 
 
@@ -304,7 +416,7 @@ A talk by Bokun Wang:
 
 
           <h3>April 13, 2021</h3>
-          <h1>Three Papers Presented at AISTATS 2021</h1>
+          <h1>Three Papers Presented to AISTATS 2021</h1>
             <br>
 We've had three papers accepted to <a href="https://aistats.org/aistats2021/">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a>. The conference will be held virtually over the next few days; during April 13-15, 2021. Here are the papers:<br><br>
 
