--- a/i_papers.html
+++ b/i_papers.html
@@ -70,7 +70,7 @@
           <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
           ICML 2021 <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
-          [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] <br>
+          [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] [<a href="https://www.youtube.com/watch?v=jO3t4eZFdkc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=37">5 min video</a>] [<a href="posters/Poster-ADOM-ICML-2021.pdf">poster</a>] <br>
           <br>
 
           [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
@@ -84,7 +84,7 @@
           ICML 2021 <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [code: MARINA, VR-MARINA, PP-MARINA]  <br>
+          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [code: MARINA, VR-MARINA, PP-MARINA] [<a href="https://www.youtube.com/watch?v=o5MwC4DYbGE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=34">5 min video</a>] [<a href="https://www.youtube.com/watch?v=bj0E94Siq74">70 min video</a>] [poster]  <br>
           <br>
 
           [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
@@ -100,7 +100,7 @@
           ICML 2021 <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="talks/TALK-2021-Newton-Learn.pdf">slides</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
+          [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="https://www.youtube.com/watch?v=iSKBZXlaoWo&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=41">5 min video</a>] [<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">80 min video</a>] [<a href="talks/TALK-2021-Newton-Learn.pdf">slides</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
           <br>
 
           [152] Konstantin Mishchenko, Ahmed Khaled and Peter Richtárik<br>
@@ -204,7 +204,7 @@
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
           <a href="https://opt-ml.org/papers/2020/paper_76.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) <span class="important">(Spotlight Talk)</span></a> <br>
           ICML 2021 <br>
-          [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE]  <br>
+          [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE] [<a href="https://www.youtube.com/watch?v=_K3XPxN-vdk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=29">5 min video</a>] <br>
           <br>
 
           [137] Dmitry Kovalev, Adil Salim, and Peter Richtárik <br>
