--- a/i_papers.html
+++ b/i_papers.html
@@ -53,7 +53,7 @@
 
           [160] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
           <b>Random reshuffling with variance reduction: new analysis and better rates</b><br>
-          [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>]  <br>
+          [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>] [<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36">3 min video</a>] [code: RR-SVRG. SO-SVRG, Cyclic-SVRG]<br>
           <br>
 
           [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
@@ -68,23 +68,23 @@
 
           [157] Dmitry Kovalev, Egor Shulgin, Peter Richtárik, Alexander Rogozin and Alexander Gasnikov<br>
           <b>ADOM: Accelerated decentralized optimization method for time-varying networks</b><br>
-          ICML 2021 <br>
+          38th International Conference on Machine Learning (ICML 2021) <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
-          [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [code: ADOM] [<a href="https://www.youtube.com/watch?v=jO3t4eZFdkc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=37">5 min video</a>] [<a href="posters/Poster-ADOM-ICML-2021.pdf">poster</a>] <br>
+          [<a href="https://arxiv.org/abs/2102.09234">arXiv</a>] [<a href="https://www.youtube.com/watch?v=jO3t4eZFdkc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=37">5 min video</a>] [<a href="posters/Poster-ADOM-ICML-2021.pdf">poster</a>] [code: ADOM] <br>
           <br>
 
           [156] Konstantin Mishchenko, Bokun Wang, Dmitry Kovalev and Peter Richtárik<br>
           <b>IntSGD: Floatless compression of stochastic gradients</b><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>] [code: IntSGD, IntDIANA] <br>
+          [<a href="https://arxiv.org/abs/2102.08374">arXiv</a>] [<a href="https://www.youtube.com/watch?v=-YjXDdwkeqc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=39">5 min video</a>] [code: IntSGD, IntDIANA] <br>
           <br>
 
           [155] Eduard Gorbunov, Konstantin Burlachenko, Zhize Li and Peter Richtárik<br>
           <b>MARINA: faster non-convex distributed learning with compression </b><br>
-          ICML 2021 <br>
+          38th International Conference on Machine Learning (ICML 2021) <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [code: MARINA, VR-MARINA, PP-MARINA] [<a href="https://www.youtube.com/watch?v=o5MwC4DYbGE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=34">5 min video</a>] [<a href="https://www.youtube.com/watch?v=bj0E94Siq74">70 min video</a>] [poster]  <br>
+          [<a href="https://arxiv.org/abs/2102.07845">arXiv</a>] [<a href="https://www.youtube.com/watch?v=o5MwC4DYbGE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=34">5 min video</a>] [<a href="https://www.youtube.com/watch?v=bj0E94Siq74">70 min video</a>] [poster]  [code: MARINA, VR-MARINA, PP-MARINA] <br>
           <br>
 
           [154] Mher Safaryan, Filip Hanzely and Peter Richtárik<br>
@@ -92,12 +92,12 @@
           <a href="https://dp-ml.github.io/2021-workshop-ICLR/">ICLR Workshop: Distributed and Private Machine Learning </a><br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>] [code: DCGD+, DIANA+, ADIANA+] <br>
+          [<a href="https://arxiv.org/abs/2102.07245">arXiv</a>] [<a href="https://www.youtube.com/watch?v=vSD-smU0JjE&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=46">5 min video</a>][code: DCGD+, DIANA+, ADIANA+] <br>
           <br>
 
           [153] Rustem Islamov, Xun Qian and Peter Richtárik<br>
           <b>Distributed second order methods with fast rates and compressed communication</b><br>
-          ICML 2021 <br>
+          38th International Conference on Machine Learning (ICML 2021) <br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2102.07158">arXiv</a>] [<a href="https://www.youtube.com/watch?v=iSKBZXlaoWo&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=41">5 min video</a>] [<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">80 min video</a>] [<a href="talks/TALK-2021-Newton-Learn.pdf">slides</a>] [<a href="posters/Poster-Newton-Learn.pdf">poster</a>] [code: NS, MN, NL1, NL2, CNL]   <br>
@@ -107,7 +107,7 @@
           <b>Proximal and federated random reshuffling</b><br>
           <a href="https://sites.google.com/ucsd.edu/cedo/"> NSF-TRIPODS Workshop: Communication Efficient Distributed Optimization </a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>] [code:ProxRR, FedRR] <br>
+          [<a href="https://arxiv.org/abs/2102.06704">arXiv</a>] [<a href="https://www.youtube.com/watch?v=aHAU6OYNoKA&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=40">8 min video</a>] [code:ProxRR, FedRR] <br>
           <br>
 
 
@@ -137,14 +137,14 @@
           <b>Local SGD: unified theory and new efficient methods</b><br>
           <a href="http://proceedings.mlr.press/v130/gorbunov21a.html">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021) </a><br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [<a href="posters/Poster-Local-SGD-AISTATS-2021.pdf">poster</a>] [code: S-Local-SVRG] <br>
+          [<a href="https://arxiv.org/abs/2011.02828">arXiv</a>] [<a href="https://www.youtube.com/watch?v=u_KoimUuc6k&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx">5 min video</a>] [<a href="posters/Poster-Local-SGD-AISTATS-2021.pdf">poster</a>] [code: S-Local-SVRG] <br>
           <br>
 
           [147] Dmitry Kovalev, Anastasia Koloskova, Martin Jaggi, Peter Richtárik, and Sebastian U. Stich<br>
           <b>A linearly convergent algorithm for decentralized optimization: sending less bits for free!</b><br>
           <a href="http://proceedings.mlr.press/v130/kovalev21a.html">The 24th International Conference on Artificial Intelligence and Statistics (AISTATS 2021)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2011.01697">arXiv</a>]  <br>
+          [<a href="https://arxiv.org/abs/2011.01697">arXiv</a>] [<a href="https://www.youtube.com/watch?v=0bAgav0x-8U&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=32">3 min video</a>] <br>
           <br>
 
           [146] Wenlin Chen, Samuel Horváth, and Peter Richtárik<br>
@@ -158,7 +158,7 @@
           <b>Linearly converging error compensated SGD</b><br>
           <a href="https://papers.nips.cc/paper/2020/hash/ef9280fbc5317f17d480e4d4f61b3751-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2010.12292">arXiv</a>] [code: EC-SGD-DIANA, EC-LSVRG-DIANA, EC-LSVRGstar, ...]  <br>
+          [<a href="https://arxiv.org/abs/2010.12292">arXiv</a>] [<a href="https://www.youtube.com/watch?v=6Hpt6hbzgjU&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=38">5 min video</a>] [code: EC-SGD-DIANA, EC-LSVRG-DIANA, EC-LSVRGstar, ...]  <br>
           <br>
 
           [144] Alyazeed Albasyoni, Mher Safaryan, Laurent Condat, and Peter Richtárik<br>
@@ -172,7 +172,7 @@
           <b>Lower bounds and optimal algorithms for personalized federated learning</b><br>
           <a href="https://papers.nips.cc/paper/2020/hash/187acf7982f3c169b3075132380986e4-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
+          [<a href="https://arxiv.org/abs/2010.02372">arXiv</a>] [<a href="https://www.youtube.com/watch?v=YkZeROHXahc&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=35">5 min video</a>] [code: APGD1, APGD2, IAPGD, AL2SGD+]  <br>
           <br>
 
           [142] Laurent Condat, Grigory Malinovsky, and Peter Richtárik<br>
@@ -203,8 +203,8 @@
           [138] Zhize Li, Hongyan Bao, Xiangliang Zhang and Peter Richtárik <br>
           <b>PAGE: A simple and optimal probabilistic gradient estimator for nonconvex optimization</b><br>
           <a href="https://opt-ml.org/papers/2020/paper_76.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop) <span class="important">(Spotlight Talk)</span></a> <br>
-          ICML 2021 <br>
-          [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [code: PAGE] [<a href="https://www.youtube.com/watch?v=_K3XPxN-vdk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=29">5 min video</a>] <br>
+          38th International Conference on Machine Learning (ICML 2021) <br>
+          [<a href="https://arxiv.org/abs/2008.10898">arXiv</a>] [<a href="https://www.youtube.com/watch?v=_K3XPxN-vdk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=29">5 min video</a>] [code: PAGE] <br>
           <br>
 
           [137] Dmitry Kovalev, Adil Salim, and Peter Richtárik <br>
@@ -243,7 +243,7 @@
           [132] Konstantin Mishchenko, Ahmed Khaled, and Peter Richtárik <br>
           <b>Random reshuffling: simple analysis with vast improvements</b> <br>
           <a href="https://papers.nips.cc/paper/2020/hash/c8cc6e90ccbff44c9cee23611711cdc4-Abstract.html">Advances in Neural Information Processing Systems 33 (NeurIPS 2020)</a> <br>
-          [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>]  [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
+          [<a href="https://arxiv.org/abs/2006.05988">arXiv</a>] [<a href="https://www.youtube.com/watch?v=0ZZY5Y_6fd4&list=PLC28kDljnOrh4XxzWpOFBIu8IHjJzmKQs">4 min video</a>] [<a href="https://github.com/konstmish/random_reshuffling">code</a>: RR, SO, IG] <br>
           <br>
 
           [131] Motasem Alfarra, Slavomír Hanzely, Alyazeed Albasyoni, Bernard Ghanem, and Peter Richtárik <br>
@@ -265,9 +265,9 @@
 
           [128] Grigory Malinovsky, Dmitry Kovalev, Elnur Gasanov, Laurent Condat, and Peter Richtárik <br>
           <b>From local SGD to local fixed point methods for federated learning</b><br>
-          <a href="http://proceedings.mlr.press/v119/malinovskiy20a.html">ICML 2020</a> <br>
+          <a href="http://proceedings.mlr.press/v119/malinovskiy20a.html">37th International Conference on Machine Learning (ICML 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
-          [<a href="https://arxiv.org/abs/2004.01442">arXiv</a>] [code: LDFPM, RDFPM] <br>
+          [<a href="https://arxiv.org/abs/2004.01442">arXiv</a>] [<a href="https://www.youtube.com/watch?v=-QgQp5HnWQY&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=28">5 min video</a>] [code: LDFPM, RDFPM] <br>
           <br>
 
           [127] Aleksandr Beznosikov, Samuel Horváth, Peter Richtárik and Mher Safaryan<br>
@@ -279,7 +279,7 @@
 
           [126] Zhize Li, Dmitry Kovalev, Xun Qian and Peter Richtárik<br>
           <b>Acceleration for compressed gradient descent in distributed and federated optimization</b><br>
-          ICML 2020 <br>
+          <a href="http://proceedings.mlr.press/v119/li20g.html">37th International Conference on Machine Learning (ICML 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2002.11364">arXiv</a>] [code: ACGD, ADIANA] <br>
           <br>
@@ -291,7 +291,7 @@
 
           [124] Filip Hanzely, Nikita Doikov, Peter Richtárik and Yurii Nesterov<br>
           <b>Stochastic subspace cubic Newton method</b><br>
-          ICML 2020 <br>
+          <a href="http://proceedings.mlr.press/v119/hanzely20a.html">37th International Conference on Machine Learning (ICML 2020)</a> <br>
           [<a href="https://arxiv.org/abs/2002.09526">arXiv</a>] [code: SSCN] <br>
           <br>
 
@@ -317,7 +317,7 @@
 
           [120] Filip Hanzely, Dmitry Kovalev and Peter Richtárik<br>
           <b>Variance reduced coordinate descent with acceleration: new method with a surprising application to finite-sum problems</b><br>
-          ICML 2020 <br>
+          <a href="http://proceedings.mlr.press/v119/hanzely20b.html">37th International Conference on Machine Learning (ICML 2020)</a> <br>
           [<a href="https://arxiv.org/abs/2002.04670">arXiv</a>]<br>
           <br>
 
@@ -331,7 +331,7 @@
 
           [118] Ahmed Khaled, Konstantin Mishchenko and Peter Richtárik<br>
           <b>Tighter theory for local SGD on identical and heterogeneous data</b><br>
-          The 23rd International Conference on Artificial Intelligence and Statistics (AISTATS 2020) <br>
+          <a href="http://proceedings.mlr.press/v108/bayoumi20a.html">The 23rd International Conference on Artificial Intelligence and Statistics (AISTATS 2020)</a> <br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/1909.04746">arXiv</a>]<br>
           <br>
@@ -386,7 +386,7 @@
           [110] Xun Qian, Zheng Qu and Peter Richtárik<br>
           <b>L-SVRG and L-Katyusha with arbitrary sampling</b><br>
           Journal of Machine Learning Research, 2021 <br>
-          [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [code: L-SVRG, L-Katyusha]<br>
+          [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [<a href="https://www.youtube.com/watch?v=QMJDOtm9wxk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=30">5 min video</a>] [code: L-SVRG, L-Katyusha]<br>
           <br>
 
           [109] Xun Qian, Alibek Sailanbayev, Konstantin Mishchenko and
@@ -409,7 +409,7 @@
 
           [107] Mher Safaryan and Peter Richtárik<br>
           <b>Stochastic Sign Descent Methods: New Algorithms and Better Theory</b><br>
-          ICML 2021 <br>
+          38th International Conference on Machine Learning (ICML 2021)<br>
           <a href="https://opt-ml.org/papers/2020/paper_14.pdf">OPT2020: 12th Annual Workshop on Optimization for Machine Learning (NeurIPS 2020 Workshop)</a> <br>
           [<a href="https://arxiv.org/abs/1905.12938">arXiv</a>] [<a href="https://opt-ml.org/posters/2020/poster_14.png">poster</a>] [code: signSGD, signSGDmaj]<br>
           <br>
@@ -440,10 +440,8 @@
           [103] Konstantin Mishchenko, Dmitry Kovalev, Egor Shulgin,
           Peter Richtárik and Yura Malitsky<br>
           <b>Revisiting stochastic extragradient</b><br>
-          The 23rd International Conference on Artificial Intelligence
-          and Statistics (AISTATS 2020)<br>
-          NeuriPS 2019 Workshop on Smooth Games Optimization and Machine
-          Learning<br>
+          <a href="http://proceedings.mlr.press/v108/mishchenko20a.html">The 23rd International Conference on Artificial Intelligence and Statistics (AISTATS 2020)</a><br>
+          NeuriPS 2019 Workshop on Smooth Games Optimization and Machine  Learning<br>
           <b> </b> [<a href="https://arxiv.org/abs/1905.11373">arXiv</a>]<br>
           <br>
 
