--- a/i_papers.html
+++ b/i_papers.html
@@ -51,9 +51,14 @@
 
           <h1> Prepared in 2021 </h1>
 
-          [160] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
+          [161] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
           <b>Random reshuffling with variance reduction: new analysis and better rates</b><br>
-          [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>] [<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36">3 min video</a>] [code: RR-SVRG. SO-SVRG, Cyclic-SVRG]<br>
+          [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>] [<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36">3 min video</a>] [code: RR-SVRG, SO-SVRG, Cyclic-SVRG]<br>
+          <br>
+
+          [160] Zhize Li and Peter Richtárik<br>
+          <b>ZeroSARAH: Efficient nonconvex finite-sum optimization with zero full gradient computation </b><br>
+          [<a href="https://arxiv.org/abs/2103.01447">arXiv</a>] [code: Zero-SARAH]<br>
           <br>
 
           [159] Adil Salim, Laurent Condat, Dmitry Kovalev and Peter Richtárik<br>
