--- a/i_talks.html
+++ b/i_talks.html
@@ -174,6 +174,16 @@ Simons Institute, Berkeley, 10/2013
 
 <h1>2021 Talks</h1>
 
+
+<p>
+  <a href="https://meetings2.informs.org/wordpress/anaheim2021/">INFORMS Annual Meeting</a>, Anaheim, California, October 24-27, 2021
+</p>
+
+<p>
+  Optimization Without Borders (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+</p>
+
+
 <p>
 [178] Talk 2 (TBA)  <a href="https://cemse.kaust.edu.sa/ai/aii-conf-2021">KAUST Conference on Artificial Intelligence</a>, KAUST, Thuwal, Saudi Arabia,  April 29, 2021
 </p>
