Created videotalks tab

--- a/i_talks.html
+++ b/i_talks.html
@@ -32,6 +32,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a class="active" href="i_talks.html">Talks</a></li>
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -67,7 +68,6 @@ University, Hong Kong, China, May 26-29, 2020 (organizing committee member) <spa
 Mathematics Research Seminar, Seoul National University, Seoul, South Korea, June 2020 (invited) <span class="important">postponed due to Covid-19</span>
 </p>
 
-
 <p>
 AI: Collaborate and Accelerate, College of Computer Sciences and Information Technology (CCSIT), King Faisal University, Al-Ahsa, Saudi Arabia, April 8, 2020 (keynote speaker) <span class="important">cancelled due to Covid-19</span>
 </p>
@@ -81,107 +81,26 @@ Research Seminar, EPFL, Switzerland, April 3, 2020 (invited) <span class="import
 session organizer) <span class="important">postponed due to Covid-19</span>
 </p>
 
-<p>
-<a href="https://www.aistats.org">AISTATS 2020</a>, Palermo, Sicily, Italy, June 3-5, 2020 (accepted papers <a href="https://arxiv.org/abs/1909.04746">1</a> <a href="https://arxiv.org/abs/1905.11373">2</a> <a href="https://arxiv.org/abs/1905.11261">3</a>)
-</p>
 
 
 
-
-<h1>Video Talks</h1>
+<h1> Future Talks</h1>
 
 <p>
-<a href="https://www.youtube.com/watch?v=jqgyjN5kLqo">"Beyond Local and Gradient Methods for Federated Learning"</a> (80 mins)
-<br> Federated Learning One World Seminar, 4/2021
+  CS Graduate Seminar, KAUST, November 8, 2021 (invited)
 </p>
-
-<p>
-<a href="https://www.youtube.com/watch?v=_1q-vt0nu44">"Distributed Second Order Methods with Fast Rates and Compressed Communication"</a>
-<br> All Russian Optimization Seminar, 4/2021
-</p>
-
-<p>
-<a href="https://www.youtube.com/watch?v=wXyXjTgINJI&list=PLqrJF7iQbscALPio49SSil8XDbfNAlOTO&index=1">"On Second Order Methods and Randomness"</a> (72 mins)
-<br> Montreal MLOpt Seminar, 5/2020
-</p>
-
-<p>
-<a href="https://www.youtube.com/watch?v=HGQkct3db-c">"On Second Order Methods and Randomness"</a> (73 mins)
-<br> One World Optimization Seminar, 4/2020
-</p>
-
-<p>
-<a href="https://www.youtube.com/watch?v=a05S0kL5u30">A Guided Walk Through the ZOO of Stochastic Gradient Descent Methods</a> (5 hrs)
-<br> MIPT, Moscow, Russia, 9/2019
-</p>
-
-<p>
-<a href="https://www.youtube.com/watch?v=n1ELUphtbgg">Variance Reduction for Gradient Compression</a> (38 mins)<br>
-Rutgers University, 9/2019
-</p>
-
-<p>
-<a href="https://www.youtube.com/watch?v=gjgEck0zU7w">Stochastic Quasi-Gradient Methods: Variance Reduction via Jacobian Sketching</a> (33 mins)<br>
-Simons Institute, Berkeley, 9/2018
-</p>
-
-<p>
-<a href="https://slideslive.com/38917651/convex-optimization">SGD:
-General Analysis and Improved Rates</a> (start: 35:40 end: 53:11) <br>
-ICML 2019
-</p>
-
-<p><a href="https://www.youtube.com/watch?v=DLbZJnz04cE">Empirical
-Risk Minimization: Complexity, Duality, Sampling, Sparsity
-and Big Data</a> (85 mins)<br>
-Yandex, Russia, 12/2017
-</p>
-
-<p><a href="https://www.youtube.com/watch?v=iZc2eFqS2l4">Stochastic
-Primal-Dual Hybrid Gradient Algorithm with Arbitrary Sampling</a> (1 hr)<br>
-MIPT, Moscow, Russia, 10/2017
-</p>
-
-<p>Introduction to Randomized Optimization <a
-href="https://comm.medias.polytechnique.fr/videos/richtarik_1_randonopti/">1</a>
-<a
-href="https://comm.medias.polytechnique.fr/videos/richtarik_2_randonoptimization/">2</a>
-<a
-href="https://comm.medias.polytechnique.fr/videos/richtarik_3_randonopti_08033/">3</a>
-<a
-href="https://comm.medias.polytechnique.fr/videos/richtarik_4_randonoptimization/">4</a>
-<a href="https://comm.medias.polytechnique.fr/videos/richtarik_5_randonoptimization/">5</a> (5 hrs)<br>
-Ecole Polytechnique, France, 8/2017
-</p>
-
-<p><a href="https://www.youtube.com/watch?v=RbkhWrTbrKs">Stochastic Dual Ascent for Solving Linear Systems</a> (31 mins)<br>
-The Alan Turing Institute, London, UK, 10/2016
-</p>
-
-<p><a href="https://www.youtube.com/watch?v=BS0kF4YijGc">Introduction to Big Data Optimization</a> (55 mins)<br>
-Portsmouth, UK, 9/2016
-</p>
-
-<p><a href="https://www.youtube.com/watch?v=0sHOfqhCZw0">Accelerated, Parallel and Proximal Coordinate Descent</a> (90 mins)<br>
-Moscow, Russia, 2/2014
-</p>
-
-<p><a href="https://www.youtube.com/watch?v=IQgnstB0n2E">Parallel Coordinate Descent Methods for Big Data Optimization</a> (55 mins)<br>
-Simons Institute, Berkeley, 10/2013
-</p>
-
-
-
-<h1>2021 Talks</h1>
-
 
 <p>
   <a href="https://meetings2.informs.org/wordpress/anaheim2021/">INFORMS Annual Meeting</a>, Anaheim, California, October 24-27, 2021
 </p>
 
 <p>
-  Optimization Without Borders (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
+<a href="https://sochisirius.ru/preview/obuchenie/graduates/smena951?uid=0bfdba6864a9018112a33a0615b67e36&_edit=/admin/app/shift/951/edit"> Optimization Without Borders </a> (celebration of the 65th Birthday of Yurii Nesterov), Sirius University, Sochi, Russia, July 12-16, 2021 (invited)
 </p>
+
+
+
+<h1>2021 Talks</h1>
 
 
 <p>
