--- a/i_papers.html
+++ b/i_papers.html
@@ -35,6 +35,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a class="active" href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
+        <li><a href="i_videotalks.html">Video Talks</a></li>        
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -625,7 +626,7 @@ src="file:///Users/richtap/Documents/WORK/GitHub/My%20GitHub%20Pages%20website/i
 
           [79] Filip Hanzely, Peter Richtárik and Lin Xiao<br>
           <b>Accelerated Bregman proximal gradient methods for relatively smooth convex optimization</b><br>
-          Computational Optimization and Applications <br>
+          <a href="https://link.springer.com/article/10.1007/s10589-021-00273-8">Computational Optimization and Applications 79:405–440, 2021</a> <br>
           [<a href="https://arxiv.org/abs/1808.03045">arXiv</a>] [code:
           <a href="https://github.com/Microsoft/accbpg">ABPG, ABDA</a>]<br>
           <br>
