--- a/i_software.html
+++ b/i_software.html
@@ -31,6 +31,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
+        <li><a href="i_videotalks.html">Video Talks</a></li>        
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a class="active" href="i_software.html">Code</a></li>
