--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -42,6 +42,24 @@
       </ul>
       <div id="wrapper" class="main">
         <div id="content">
+
+
+
+
+
+          <h3>June 5, 2021</h3>
+          <h1>Finally, the NeurIPS Month of Deadlines is Over</h1>
+
+          <br>
+          I've been silent here for a while due a stream of NeurIPS deadlines (abstract, paper, supplementary material). Me and my fantastic <a href="https://richtarik.org/i_team.html">team</a> can rest a bit now! <br>
+
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
 
 
 
