--- a/i_papers.html
+++ b/i_papers.html
@@ -35,7 +35,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a class="active" href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -391,7 +391,7 @@
 
           [110] Xun Qian, Zheng Qu and Peter Richtárik<br>
           <b>L-SVRG and L-Katyusha with arbitrary sampling</b><br>
-          Journal of Machine Learning Research, 2021 <br>
+          <a href="https://jmlr.org/papers/v22/20-156.html">Journal of Machine Learning Research 22(112):1−47, 2021</a> <br>
           [<a href="https://arxiv.org/abs/1906.01481">arXiv</a>] [<a href="https://www.youtube.com/watch?v=QMJDOtm9wxk&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=30">5 min video</a>] [code: L-SVRG, L-Katyusha]<br>
           <br>
 
