--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,12 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [162] Mher Safaryan, Rustem Islamov, Xun Qian and Peter Richtárik<br>
+          <b>FedNL: making Newton-type methods applicable to federated learning</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
+          <br>
+
           [161] Grigory Malinovsky, Alibek Sailanbayev and Peter Richtárik<br>
           <b>Random reshuffling with variance reduction: new analysis and better rates</b><br>
           [<a href="https://arxiv.org/abs/2104.09342">arXiv</a>] [<a href="https://www.youtube.com/watch?v=DK9CJmz6SR8&list=PLC28kDljnOrj-_w-MHKW36gVRvUe3XFjx&index=36">3 min video</a>] [code: RR-SVRG, SO-SVRG, Cyclic-SVRG]<br>
@@ -59,6 +65,7 @@
 
           [160] Zhize Li and Peter Richtárik<br>
           <b>ZeroSARAH: Efficient nonconvex finite-sum optimization with zero full gradient computation </b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2103.01447">arXiv</a>] [code: Zero-SARAH]<br>
           <br>
 
