--- a/i_papers.html
+++ b/i_papers.html
@@ -52,8 +52,24 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [165] Bokun Wang, Mher Safaryan and Peter Richtárik<br>
+          <b>Smoothness-aware quantization techniques</b><br>
+          [<a href="https://arxiv.org/abs/2106.03524">arXiv</a>] [code: DCGD+, DIANA+]<br>
+          <br>
+
+          [164] Adil Salim, Lukang Sun and Peter Richtárik<br>
+          <b>Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1</b><br>
+          [<a href="https://arxiv.org/abs/2106.03076">arXiv</a>] [code: SVGD]<br>
+          <br>
+
+          [163] Laurent Condat and Peter Richtárik<br>
+          <b>MURANA: A generic framework for stochastic variance-reduced optimization</b><br>
+          <span class="important">Federated Learning Paper</span><br>
+          [<a href="https://arxiv.org/abs/2106.03056">arXiv</a>] [code: MURANA, ELVIRA]<br>
+          <br>
+
           [162] Mher Safaryan, Rustem Islamov, Xun Qian and Peter Richtárik<br>
-          <b>FedNL: making Newton-type methods applicable to federated learning</b><br>
+          <b>FedNL: Making Newton-type methods applicable to federated learning</b><br>
           <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.02969">arXiv</a>] [code: FedNL, FedNL-PP, FedNL-CR, FedNL-LS, FedNL-BC, N0, NS]<br>
           <br>
