--- a/i_papers.html
+++ b/i_papers.html
@@ -54,6 +54,7 @@
 
           [165] Bokun Wang, Mher Safaryan and Peter Richtárik<br>
           <b>Smoothness-aware quantization techniques</b><br>
+          <span class="important">Federated Learning Paper</span><br>
           [<a href="https://arxiv.org/abs/2106.03524">arXiv</a>] [code: DCGD+, DIANA+]<br>
           <br>
 
