--- a/i_papers.html
+++ b/i_papers.html
@@ -697,7 +697,8 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
           <br>
 
           [72] Filip Hanzely and Peter Richtárik <br>
-          <b> Fastest rates for stochastic mirror descent methods</b><br>
+          <b>Fastest rates for stochastic mirror descent methods</b><br>
+          Computational Optimization and Applications, 2021<br>
           [<a href="https://arxiv.org/abs/1803.07374">arXiv</a>]<br>
           <br>
 
@@ -721,8 +722,8 @@ href="https://youtu.be/gjgEck0zU7w?list=PLgKuh-lKre13E9dXSsif4KsGoFp4bjubd"><img
             href="bib/69.bib">bib</a>] [code: RBCN]<br>
           <br>
 
-          [68] Dmitry Kovalev, Eduard Gorbunov, Elnur Gasanov and Peter Richtárik <b><br>
-            Stochastic spectral and conjugate descent methods</b><br>
+          [68] Dmitry Kovalev, Eduard Gorbunov, Elnur Gasanov and Peter Richtárik<br>
+           <b>Stochastic spectral and conjugate descent methods</b><br>
           <a href="https://papers.nips.cc/paper/7596-stochastic-spectral-and-conjugate-descent-methods">Advances in Neural Information Processing Systems 31:3358-3367, 2018</a><br>
           [<a href="https://arxiv.org/abs/1802.03703">arXiv</a>] [<a
             href="posters/Poster-SSCD.pdf">poster</a>] [code: SSD,
