--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
+          <b>Lower bounds and optimal algorithms for smooth and strongly convex decentralized optimization over time-varying networks</b><br>
+          [<a href="https://arxiv.org/abs/2106.04469">arXiv</a>] [code: ADOM+]<br>
+          <br>
+
           [165] Bokun Wang, Mher Safaryan and Peter Richtárik<br>
           <b>Smoothness-aware quantization techniques</b><br>
           <span class="important">Federated Learning Paper</span><br>
