--- a/index.html
+++ b/index.html
@@ -44,8 +44,57 @@
         <div id="content">
 
 
+          <h3>June 6, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
 
-          <h3>June 8, 2021</h3>
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2106.03076">">Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1"</a> -
+          joint work with
+          <a href="https://adil-salim.github.io">Adil Salim</a>, and <a href="https://lukangsun.github.io">Lukang Sun</a>.<br>
+          <br>
+
+          Abstract: <i>
+We study the complexity of Stein Variational Gradient Descent (SVGD), which is an algorithm to sample from π(x)∝exp(−F(x)) where F smooth and nonconvex.
+We provide a clean complexity bound for SVGD in the population limit in terms of the
+Stein Fisher Information (or squared Kernelized Stein Discrepancy), as a function of the dimension of the problem d and the desired accuracy ε.
+Unlike existing work, we do not make any assumption on the trajectory of the algorithm. Instead, our key assumption is that the target distribution
+satisfies Talagrand's inequality T1.
+</i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+          <h3>June 6, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2106.03056">">MURANA: A Generic Framework for Stochastic Variance-Reduced Optimization"</a> -
+          joint work with
+          <a href="https://lcondat.github.io">Laurent Condat</a>.<br>
+          <br>
+
+          Abstract: <i>
+We propose a generic variance-reduced algorithm, which we call MUltiple RANdomized Algorithm (MURANA), for minimizing a sum of several smooth functions plus a regularizer, in a sequential or distributed manner. Our method is formulated with general stochastic operators, which allow us to model various strategies for reducing the computational complexity. For example, MURANA supports sparse activation of the gradients, and also reduction of the communication load via compression of the update vectors. This versatility allows MURANA to cover many existing randomization mechanisms within a unified framework. However, MURANA also encodes new methods as special cases. We highlight one of them, which we call ELVIRA, and show that it improves upon Loopless SVRG.
+          </i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+          <h3>June 5, 2021</h3>
           <h1>New Paper</h1>
           <br>
 
