--- a/i_team.html
+++ b/i_team.html
@@ -31,7 +31,7 @@
         <li><a href="i_oldnews.html">Old News</a></li>
         <li><a href="i_papers.html">Papers</a></li>
         <li><a href="i_talks.html">Talks</a></li>
-        <li><a href="i_videotalks.html">Video Talks</a></li>        
+        <li><a href="i_videotalks.html">Video Talks</a></li>
         <li><a href="i_events.html">Events</a></li>
         <li><a href="i_seminar.html">Seminar</a></li>
         <li><a href="i_software.html">Code</a></li>
@@ -70,7 +70,7 @@
 
           <h2>PhD Students </h2>
           <ul>
-            <li>Lukang Sun (3/2021-present)</li>
+            <li><a href="https://lukangsun.github.io">Lukang Sun</a> (3/2021-present)</li>
             <li><a href="https://slavomirhanzely.wordpress.com">Slavomír Hanzely</a> (1/2021-present)</li>
             <li><a href="https://cemse.kaust.edu.sa/news/meet-kaust-student-konstantin-burlachenko?fbclid=IwAR2KCPy-X1C4Ls8u9rhlkNwqdRqONaKPqHdXzmBq_lSNDpOjGxVBM-o0DZE">Konstantin Burlachenko</a> (08/2020-present)</li>
             <li><a href="https://www.dmitry-kovalev.com/">Dmitry Kovalev</a> (1/2020-present)</li>
