--- a/index.html
+++ b/index.html
@@ -49,7 +49,31 @@
           <br>
 
           <span class="important">New paper out: </span>
-          <a href="https://arxiv.org/abs/2106.03076">">Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1"</a> -
+          <a href="https://arxiv.org/abs/2106.03524">Smoothness-aware quantization techniques"</a> -
+          joint work with
+          <a href="https://adil-salim.github.io">Bokun Wang</a>, and <a href="https://lukangsun.github.io">Mher Safaryan</a>.<br>
+          <br>
+
+          Abstract: <i>
+Distributed machine learning has become an indispensable tool for training large supervised machine learning models. To address the high communication costs of distributed training, which is further exacerbated by the fact that modern highly performing models are typically overparameterized, a large body of work has been devoted in recent years to the design of various compression strategies, such as sparsification and quantization, and optimization algorithms capable of using them. Recently, Safaryan et al (2021) pioneered a dramatically different compression design approach: they first use the local training data to form local "smoothness matrices", and then propose to design a compressor capable of exploiting the smoothness information contained therein. While this novel approach leads to substantial savings in communication, it is limited to sparsification as it crucially depends on the linearity of the compression operator. In this work, we resolve this problem by extending their smoothness-aware compression strategy to arbitrary unbiased compression operators, which also includes sparsification. Specializing our results to quantization, we observe significant savings in communication complexity compared to standard quantization. In particular, we show theoretically that block quantization with n blocks outperforms single block quantization, leading to a reduction in communication complexity by an O(n) factor, where n is the number of nodes in the distributed system. Finally, we provide extensive numerical evidence that our smoothness-aware quantization strategies outperform existing quantization schemes as well the aforementioned smoothness-aware sparsification strategies with respect to all relevant success measures: the number of iterations, the total amount of bits communicated, and wall-clock time.
+</i>
+          <br>
+
+          <br>
+          <br>
+          <img alt="" src="imgs/fancy-line.png" width="196" height="36">
+          <br>
+          <br>
+
+
+
+
+          <h3>June 6, 2021</h3>
+          <h1>New Paper</h1>
+          <br>
+
+          <span class="important">New paper out: </span>
+          <a href="https://arxiv.org/abs/2106.03076">Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1"</a> -
           joint work with
           <a href="https://adil-salim.github.io">Adil Salim</a>, and <a href="https://lukangsun.github.io">Lukang Sun</a>.<br>
           <br>
@@ -76,7 +100,7 @@ satisfies Talagrand's inequality T1.
           <br>
 
           <span class="important">New paper out: </span>
-          <a href="https://arxiv.org/abs/2106.03056">">MURANA: A Generic Framework for Stochastic Variance-Reduced Optimization"</a> -
+          <a href="https://arxiv.org/abs/2106.03056">MURANA: A Generic Framework for Stochastic Variance-Reduced Optimization"</a> -
           joint work with
           <a href="https://lcondat.github.io">Laurent Condat</a>.<br>
           <br>
