--- a/index.html
+++ b/index.html
@@ -49,9 +49,8 @@
           <br>
 
           <span class="important">New paper out: </span>
-          <a href="https://arxiv.org/abs/2106.03524">Smoothness-aware quantization techniques"</a> -
-          joint work with
-          <a href="https://adil-salim.github.io">Bokun Wang</a>, and <a href="https://lukangsun.github.io">Mher Safaryan</a>.<br>
+          <a href="https://arxiv.org/abs/2106.03524">"Smoothness-aware quantization techniques"</a> -
+          joint work with Bokun Wang, and <a href="https://mher-safaryan.github.io">Mher Safaryan</a>.<br>
           <br>
 
           Abstract: <i>
@@ -73,7 +72,7 @@ Distributed machine learning has become an indispensable tool for training large
           <br>
 
           <span class="important">New paper out: </span>
-          <a href="https://arxiv.org/abs/2106.03076">Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1"</a> -
+          <a href="https://arxiv.org/abs/2106.03076">"Complexity analysis of Stein variational gradient descent under Talagrand's inequality T1"</a> -
           joint work with
           <a href="https://adil-salim.github.io">Adil Salim</a>, and <a href="https://lukangsun.github.io">Lukang Sun</a>.<br>
           <br>
@@ -100,7 +99,7 @@ satisfies Talagrand's inequality T1.
           <br>
 
           <span class="important">New paper out: </span>
-          <a href="https://arxiv.org/abs/2106.03056">MURANA: A Generic Framework for Stochastic Variance-Reduced Optimization"</a> -
+          <a href="https://arxiv.org/abs/2106.03056">"MURANA: A Generic Framework for Stochastic Variance-Reduced Optimization"</a> -
           joint work with
           <a href="https://lcondat.github.io">Laurent Condat</a>.<br>
           <br>
