new paper: EF21

--- a/i_papers.html
+++ b/i_papers.html
@@ -52,6 +52,11 @@
 
           <h1> Prepared in 2021 </h1>
 
+          [167] Peter Richtárik, Igor Sokolov and Ilyas Fatkhullin<br>
+          <b>EF21: A new, simpler, theoretically better, and practically faster error feedback</b><br>
+          [<a href="https://arxiv.org/abs/2106.05203">arXiv</a>] [code: EF21, EF21+]<br>
+          <br>
+
           [166] Dmitry Kovalev, Elnur Gasanov, Peter Richtárik and Alexander Gasnikov<br>
           <b>Lower bounds and optimal algorithms for smooth and strongly convex decentralized optimization over time-varying networks</b><br>
           [<a href="https://arxiv.org/abs/2106.04469">arXiv</a>] [code: ADOM+]<br>
